kubernetes/cloud/apps/business/connelybrothers-origin/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: connelybrothers-origin
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https-bighornbyte
  hostnames:
    - ${CB_PROD_CLOUD_FQDN}
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: connelybrothers-origin-host
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
      backendRefs:
        - name: connelybrothers-web
          port: 8000
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: connelybrothers-monitor
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https-bighornbyte
  hostnames:
    - ${CB_PROD_CLOUD_FQDN}
  rules:
    - matches:
        - path:
            type: Exact
            value: /_ha/backup-metrics
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /metrics
      backendRefs:
        - name: patroni
          namespace: database
          port: 9187
    - matches:
        - path:
            type: Exact
            value: /_ha/wal-metrics
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /metrics
      backendRefs:
        - name: patroni
          namespace: database
          port: 9188
    - matches:
        - path:
            type: Exact
            value: /_ha/patroni
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /patroni
      backendRefs:
        - name: patroni
          namespace: database
          port: 8008
    - matches:
        - path:
            type: Exact
            value: /_ha/primary
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /primary
      backendRefs:
        - name: patroni
          namespace: database
          port: 8008
    - matches:
        - path:
            type: Exact
            value: /_ha/cluster
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /cluster
      backendRefs:
        - name: patroni
          namespace: database
          port: 8008
